# gitselect

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: cli.rs  main.rs
src/git/: fs.rs  mod.rs
src/select/: mod.rs
